# zzacwt

./: .gitignore  CAPTURE_THREAD_OUTPUT.md  CMakeLists.txt  CMakePresets.json  INSTALL  README  THREAD_SAFE_QUEUE_NOTES.md  ZZACWT.aip  complete_thread_investigation_summary.md  convert_rose_to_apple.ps1  heap_corruption_analysis.md  qso_data.txt  shutdown_fix_summary.md  spectrogram_data_race_analysis.md  stderr_redirect.h  text.txt  thread_debugging_instrumentation.md  thread_exit_code_1_analysis.md  thread_exit_code_1_fix_applied.md  thread_safety_fix_summary.md  word_list.txt  zzacwt.rc.in
Specs/: outline.dox
api/: CMakeLists.txt  Doxyfile.in
enc_temp_folder/9f72e750e7689f4eb6eda669c13aac31/: ZZAVNAD.json
include/: codec.hpp  cred_dialog.hpp  decode_control.hpp  mod_mixer.hpp  monitor.hpp  noise_gen.hpp  oscillator.hpp  params.hpp  review.hpp  shaper.hpp  text_gen.hpp  user_if.hpp
src/: codec.cpp  cred_dialog.cpp  decode_control.cpp  main.cpp  mod_mixer.cpp  monitor.cpp  noise_gen.cpp  oscillator.cpp  review.cpp  shaper.cpp  text_gen.cpp  user_if.cpp
userguide/: CMakeLists.txt  Doxyfile.in
userguide/src/: audio.dox  data.dox  decoder.dox  generation.dox  index.dox  overview.dox  review.dox
